--- a/index.html
+++ b/index.html
@@ -19,10 +19,14 @@
   </style>
 </head>
 <body>
-  <h1>🔊 Ejemplos de Audio</h1>
-
-  <div class="audio-block">
-    <h3>🎙️ Audio original</h3>
+  <h1>Ejemplos de Conversión</h1>
+  <div>
+    <h2>Conversiones con VAE-GAN</h2>
+    <p>Estos ejemplos muestran la conversión de audio utilizando un modelo VAE-GAN. Escucha el audio original y el generado para comparar.</p>
+    <div>
+      Voz a violín
+      <div class="audio-block">
+    <h3>Audio original</h3>
     <audio controls>
       <source src="audios/originales/f1_scales_belt_i.wav" type="audio/wav">
       Tu navegador no soporta audio.
@@ -30,12 +34,17 @@
   </div>
 
   <div class="audio-block">
-    <h3>🛠️ Audio generado</h3>
+    <h3>Audio generado</h3>
     <audio controls>
       <source src="audios/convertidos/vae_gan/exp1/G2_f1_scales_belt_i_mel.wav" type="audio/wav">
       Tu navegador no soporta audio.
     </audio>
   </div>
+
+    </div>
+  </div>
+
+ 
 
 </body>
 </html>
