--- a/index.html
+++ b/index.html
@@ -15,6 +15,13 @@
     }
     .audio-block {
       margin-bottom: 30px;
+      width: 48%;
+    }
+    .audio-row {
+      display: flex;
+      justify-content: space-between;
+      gap: 4%;
+      margin-bottom: 30px;
     }
   </style>
 </head>
@@ -25,26 +32,23 @@
     <p>Estos ejemplos muestran la conversión de audio utilizando un modelo VAE-GAN. Escucha el audio original y el generado para comparar.</p>
     <div>
       Voz a violín
-      <div class="audio-block">
-    <h3>Audio original</h3>
-    <audio controls>
-      <source src="audios/originales/f1_scales_belt_i.wav" type="audio/wav">
-      Tu navegador no soporta audio.
-    </audio>
-  </div>
-
-  <div class="audio-block">
-    <h3>Audio generado</h3>
-    <audio controls>
-      <source src="audios/convertidos/vae_gan/exp1/G2_f1_scales_belt_i_mel.wav" type="audio/wav">
-      Tu navegador no soporta audio.
-    </audio>
-  </div>
-
+      <div class="audio-row">
+        <div class="audio-block">
+          <h3>Audio original</h3>
+          <audio controls>
+            <source src="audios/originales/f1_scales_belt_i.wav" type="audio/wav">
+            Tu navegador no soporta audio.
+          </audio>
+        </div>
+        <div class="audio-block">
+          <h3>Audio generado</h3>
+          <audio controls>
+            <source src="audios/convertidos/vae_gan/exp1/G2_f1_scales_belt_i_mel.wav" type="audio/wav">
+            Tu navegador no soporta audio.
+          </audio>
+        </div>
+      </div>
     </div>
   </div>
-
- 
-
 </body>
 </html>
